tests/semantic_cases/invalid/writeln_with_arg.ob0
(* INVALID: WriteLn builtin is called with arguments but expects arity 0 *)
MODULE Main;
BEGIN
  WriteLn(1)
END Main.
